.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/Orientation_checklist_WHS_form__c.object-meta.xml
<CustomObject>
    <description>Orientation checklist (WHS form)</description>
    <label>WHS form</label>
    <nameField>
        <label>Orientation checklist (WHS form) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orientation checklist (WHS form)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>