.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Accommodation_FeeCharged__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_FeeCharged__c</fullName>
    <description>Are you being charged a fee for any aspect of the accommodation you are staying in (rental fee, cost of utilities etc.)? If so, please provide details.</description>
    <inlineHelpText>Are you being charged a fee for any aspect of the accommodation you are staying in (rental fee, cost of utilities etc.)? If so, please provide details.</inlineHelpText>
    <label>Accommodation FeeCharged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>