.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Accommodation_FeeDetails__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_FeeDetails__c</fullName>
    <description>[If yes] Please specify</description>
    <inlineHelpText>[If yes] Please specify</inlineHelpText>
    <label>Accommodation FeeDetails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>