.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Accommodation_PhysicalAddress__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_PhysicalAddress__c</fullName>
    <description>What is the physical address of the accommodation you are staying in for the duration of your contract?</description>
    <inlineHelpText>What is the physical address of the accommodation you are staying in for the duration of your contract?</inlineHelpText>
    <label>Accommodation PhysicalAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>