.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/AggressiveClients_Procedure__c.field-meta.xml
<CustomField>
    <fullName>AggressiveClients_Procedure__c</fullName>
    <description>What procedures are in place to protect stagg against aggressive clients?</description>
    <inlineHelpText>What procedures are in place to protect stagg against aggressive clients?</inlineHelpText>
    <label>AggressiveClients Procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>