.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>TR1__Application_V2__c</referenceTo>
    <relationshipLabel>Orientation checklist (WHS form)</relationshipLabel>
    <relationshipName>Orientation_checklist_WHS_form_del</relationshipName>
    <type>Lookup</type>
</CustomField>