.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/BloodFridge_Location__c.field-meta.xml
<CustomField>
    <fullName>BloodFridge_Location__c</fullName>
    <description>Locate the blood fridge / vaccine fridge</description>
    <inlineHelpText>Locate the blood fridge / vaccine fridge</inlineHelpText>
    <label>BloodFridge Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>