.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/BuildingLock_Process__c.field-meta.xml
<CustomField>
    <fullName>BuildingLock_Process__c</fullName>
    <description>When is the building locked / process for this / AH&apos;s access</description>
    <inlineHelpText>When is the building locked / process for this / AH&apos;s access</inlineHelpText>
    <label>BuildingLock Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>