.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orientation checklist (WHS form)</relationshipLabel>
    <relationshipName>Orientation_checklist_WHS_form</relationshipName>
    <type>Lookup</type>
</CustomField>