.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orientation checklist (WHS form)</relationshipLabel>
    <relationshipName>Orientation_checklist_WHS_form</relationshipName>
    <type>Lookup</type>
</CustomField>