.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Closing_Report__c.field-meta.xml
<CustomField>
    <fullName>Closing_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement/Closing Report</label>
    <referenceTo>TR1__Closing_Report__c</referenceTo>
    <relationshipLabel>Orientation checklist (WHS form)</relationshipLabel>
    <relationshipName>Orientation_checklist_WHS_form</relationshipName>
    <type>Lookup</type>
</CustomField>