.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/CommunicationBook_Location__c.field-meta.xml
<CustomField>
    <fullName>CommunicationBook_Location__c</fullName>
    <description>Communication book / board and roister/shuft times location</description>
    <inlineHelpText>Communication book / board and roister/shuft times location</inlineHelpText>
    <label>CommunicationBook Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>