.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/ComputerAccess_Arranged__c.field-meta.xml
<CustomField>
    <fullName>ComputerAccess_Arranged__c</fullName>
    <description>Arrange Computer access / database access</description>
    <inlineHelpText>Arrange Computer access / database access</inlineHelpText>
    <label>ComputerAccess Arranged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>