.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/ComputerAccess_details__c.field-meta.xml
<CustomField>
    <fullName>ComputerAccess_details__c</fullName>
    <description>Comment</description>
    <inlineHelpText>Comment</inlineHelpText>
    <label>ComputerAccess details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>