.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Created_via_Form__c.field-meta.xml
<CustomField>
    <fullName>Created_via_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via Form</label>
    <type>Checkbox</type>
</CustomField>