.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Dispensing_AfterHours__c.field-meta.xml
<CustomField>
    <fullName>Dispensing_AfterHours__c</fullName>
    <description>Dispensing after hours - protocols</description>
    <inlineHelpText>Dispensing after hours - protocols</inlineHelpText>
    <label>Dispensing AfterHours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>