.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Document_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Document_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Assignment</label>
    <referenceTo>b3o__Document_Assignment__c</referenceTo>
    <relationshipLabel>Orientation checklist (WHS form)</relationshipLabel>
    <relationshipName>Orientation_checklist_WHS_form</relationshipName>
    <type>Lookup</type>
</CustomField>