.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/EmergencyTrolley_Details__c.field-meta.xml
<CustomField>
    <fullName>EmergencyTrolley_Details__c</fullName>
    <description>Emergency Trolley - location and familiarity</description>
    <inlineHelpText>Emergency Trolley - location and familiarity</inlineHelpText>
    <label>EmergencyTrolley Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>