.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/EquipmentFamiliarity_IVAC__c.field-meta.xml
<CustomField>
    <fullName>EquipmentFamiliarity_IVAC__c</fullName>
    <description>Becoma familiar with minitors and equipment (IVAC, Epidural etc)</description>
    <inlineHelpText>Becoma familiar with minitors and equipment (IVAC, Epidural etc)</inlineHelpText>
    <label>EquipmentFamiliarity IVAC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>