.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Facility_name__c.field-meta.xml
<CustomField>
    <fullName>Facility_name__c</fullName>
    <description>Facility name</description>
    <inlineHelpText>Facility name</inlineHelpText>
    <label>Facility name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>