.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/FacilityLayout_Comments__c.field-meta.xml
<CustomField>
    <fullName>FacilityLayout_Comments__c</fullName>
    <description>Comment</description>
    <inlineHelpText>Comment</inlineHelpText>
    <label>FacilityLayout Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>