.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/FacilityLayout_RoomNumbers__c.field-meta.xml
<CustomField>
    <fullName>FacilityLayout_RoomNumbers__c</fullName>
    <description>Layout of facility, room numbers</description>
    <inlineHelpText>Layout of facility, room numbers</inlineHelpText>
    <label>FacilityLayout RoomNumbers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>