.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Fireboard__c.field-meta.xml
<CustomField>
    <fullName>Fireboard__c</fullName>
    <description>Fireboard</description>
    <inlineHelpText>Fireboard</inlineHelpText>
    <label>Fireboard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>