.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Form_Submitted48Hours__c.field-meta.xml
<CustomField>
    <fullName>Form_Submitted48Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This form has been completed and submited to Alliance Rural &amp; Remote Health within 48 hours of commencing at the facility.</description>
    <inlineHelpText>This form has been completed and submited to Alliance Rural &amp; Remote Health within 48 hours of commencing at the facility.</inlineHelpText>
    <label>Form Submitted48Hours</label>
    <type>Checkbox</type>
</CustomField>