.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/IncidentProcess_Exists__c.field-meta.xml
<CustomField>
    <fullName>IncidentProcess_Exists__c</fullName>
    <description>Is there an Incident Reporting Process in place?</description>
    <inlineHelpText>Is there an Incident Reporting Process in place?</inlineHelpText>
    <label>IncidentProcess Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>