.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Induction_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Induction_Coverage__c</fullName>
    <description>Does the induction cover location of policies and procedures, documentation requirements and after-hours on call contacts?</description>
    <inlineHelpText>Does the induction cover location of policies and procedures, documentation requirements and after-hours on call contacts?</inlineHelpText>
    <label>Induction Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>