.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/MedicalRecords_Access__c.field-meta.xml
<CustomField>
    <fullName>MedicalRecords_Access__c</fullName>
    <description>Location of medical records, and how to access these after hours</description>
    <inlineHelpText>Location of medical records, and how to access these after hours</inlineHelpText>
    <label>MedicalRecords Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>