.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/MedicalRecords_details__c.field-meta.xml
<CustomField>
    <fullName>MedicalRecords_details__c</fullName>
    <description>Comment</description>
    <inlineHelpText>Comment</inlineHelpText>
    <label>MedicalRecords details:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>