.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Nurse_name__c.field-meta.xml
<CustomField>
    <fullName>Nurse_name__c</fullName>
    <description>Nurse name</description>
    <inlineHelpText>Nurse name</inlineHelpText>
    <label>Nurse name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>