.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/OHSAwareness_Process__c.field-meta.xml
<CustomField>
    <fullName>OHSAwareness_Process__c</fullName>
    <description>How are workers made aware of OH&amp;S issues/responsibilities? Is this documented in procedures?</description>
    <inlineHelpText>How are workers made aware of OH&amp;S issues/responsibilities? Is this documented in procedures?</inlineHelpText>
    <label>OHSAwareness Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>