.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/OHSIssue_Procedure__c.field-meta.xml
<CustomField>
    <fullName>OHSIssue_Procedure__c</fullName>
    <description>What is the procedure for minimising/resolving OH&amp;S issues?</description>
    <inlineHelpText>What is the procedure for minimising/resolving OH&amp;S issues?</inlineHelpText>
    <label>OHSIssue Procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>