.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/OHSPolicies_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>OHSPolicies_Monitoring__c</fullName>
    <description>How do senior staff monitor that the agency nurse is following OH&amp;S policies and procedures?</description>
    <inlineHelpText>How do senior staff monitor that the agency nurse is following OH&amp;S policies and procedures?</inlineHelpText>
    <label>OHSPolicies Monitoring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>