.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/OHSPolicy_Current__c.field-meta.xml
<CustomField>
    <fullName>OHSPolicy_Current__c</fullName>
    <description>Does the facility have a current OH&amp;S Policy?</description>
    <inlineHelpText>Does the facility have a current OH&amp;S Policy?</inlineHelpText>
    <label>OHSPolicy Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>