.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/OnCallRoster_comments__c.field-meta.xml
<CustomField>
    <fullName>OnCallRoster_comments__c</fullName>
    <description>Comment</description>
    <inlineHelpText>Comment</inlineHelpText>
    <label>OnCallRoster comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>