.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/OnCallRoster_Details__c.field-meta.xml
<CustomField>
    <fullName>OnCallRoster_Details__c</fullName>
    <description>Locate the On Call roster + phone numbers for On Call + Doctor&apos;s number</description>
    <inlineHelpText>Locate the On Call roster + phone numbers for On Call + Doctor&apos;s number</inlineHelpText>
    <label>OnCallRoster Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>