.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Pathology_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Comments__c</fullName>
    <description>Comment</description>
    <inlineHelpText>Comment</inlineHelpText>
    <label>Pathology Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>