.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Pathology_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Requirements__c</fullName>
    <description>Requirements for requesting, packing, storing and sending pathology</description>
    <inlineHelpText>Requirements for requesting, packing, storing and sending pathology</inlineHelpText>
    <label>Pathology Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>