.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/PatientPaperwork_Requirements__c.field-meta.xml
<CustomField>
    <fullName>PatientPaperwork_Requirements__c</fullName>
    <description>Patient paperwork requirements / nursing notes</description>
    <inlineHelpText>Patient paperwork requirements / nursing notes</inlineHelpText>
    <label>PatientPaperwork Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>