.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/PatientTransfer_Procedure__c.field-meta.xml
<CustomField>
    <fullName>PatientTransfer_Procedure__c</fullName>
    <description>Patient transfer procedure and paperwork (Eg RFDS, QAS, NETS etc)</description>
    <inlineHelpText>Patient transfer procedure and paperwork (Eg RFDS, QAS, NETS etc)</inlineHelpText>
    <label>PatientTransfer Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>