.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/PharmacyAccess_Protocol__c.field-meta.xml
<CustomField>
    <fullName>PharmacyAccess_Protocol__c</fullName>
    <description>Pharamcy access and protocol for supply</description>
    <inlineHelpText>Pharamcy access and protocol for supply</inlineHelpText>
    <label>PharmacyAccess Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>