.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/PPE_Supplied__c.field-meta.xml
<CustomField>
    <fullName>PPE_Supplied__c</fullName>
    <description>What PPE will be supplied to staff?</description>
    <inlineHelpText>What PPE will be supplied to staff?</inlineHelpText>
    <label>PPE Supplied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>