.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/ReportingObligations_Awareness__c.field-meta.xml
<CustomField>
    <fullName>ReportingObligations_Awareness__c</fullName>
    <description>Are you aware of your reporting obligations in cases of suspected child or
elderly abuse and neglect? Have you familiarised yourself with the facilities policies and procedures around this type of reporting?</description>
    <inlineHelpText>Are you aware of your reporting obligations in cases of suspected child or
elderly abuse and neglect? Have you familiarised yourself with the facilities policies and procedures around this type of reporting?</inlineHelpText>
    <label>ReportingObligations Awareness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>