.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Safety_HazardousSubstances__c.field-meta.xml
<CustomField>
    <fullName>Safety_HazardousSubstances__c</fullName>
    <description>How is safety ensured when workers encounter hazardous substances?</description>
    <inlineHelpText>How is safety ensured when workers encounter hazardous substances?</inlineHelpText>
    <label>Safety HazardousSubstances</label>
    <length>255</length>
    <type>Text</type>
</CustomField>