.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/SafetyPrecautions_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>SafetyPrecautions_Accommodation__c</fullName>
    <description>What safety precautions are takeing to ensure the safety of staff in the accomodation?</description>
    <inlineHelpText>What safety precautions are takeing to ensure the safety of staff in the accomodation?</inlineHelpText>
    <label>SafetyPrecautions Accommodation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>