.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>Orientation checklist (WHS form)</relationshipLabel>
    <relationshipName>Orientation_checklist_WHS_form</relationshipName>
    <type>Lookup</type>
</CustomField>