.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/StaffProtection_Discrimination__c.field-meta.xml
<CustomField>
    <fullName>StaffProtection_Discrimination__c</fullName>
    <description>What protecion is in place for staff experienecing discrimination and harassment in the workplace?</description>
    <inlineHelpText>What protecion is in place for staff experienecing discrimination and harassment in the workplace?</inlineHelpText>
    <label>StaffProtection Discrimination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>