.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/StandardProtocols_Orders__c.field-meta.xml
<CustomField>
    <fullName>StandardProtocols_Orders__c</fullName>
    <description>Standard protocols / Standing orders</description>
    <inlineHelpText>Standard protocols / Standing orders</inlineHelpText>
    <label>StandardProtocols Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>