.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/fields/WorkplaceInduction_Offered__c.field-meta.xml
<CustomField>
    <fullName>WorkplaceInduction_Offered__c</fullName>
    <description>Does the facility offer an wokrplace specific induction (including OH&amp;S) to all employees and agency staff?</description>
    <inlineHelpText>Does the facility offer an wokrplace specific induction (including OH&amp;S) to all employees and agency staff?</inlineHelpText>
    <label>WorkplaceInduction Offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>