.vscode/allianceuat_compare/force-app/main/default/objects/Orientation_checklist_WHS_form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Candidate__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Closing_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>